Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-57510

Sometimes uniforms get wrong type from QML -> C++ -> GLSL

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P0: Blocker
    • 5.8.0
    • 5.8.0 RC
    • Qt3D
    • None
    • 1c9d92ecbb5d132313905c68914384674099ec29

    Description

      For example when setting a parameter to a value of 2.0 in QML, we end up with bad data in the float being passed to GLSL. I think this is caused by the 2.0 being represented as an integer within the variant used to get the data to the backend.

      The backend knows the uniform is of type float so I think it's a missing int -> float cast somewhere.

      Attachments

        For Gerrit Dashboard: QTBUG-57510
        # Subject Branch Project Status CR V

        Activity

          People

            seanharmer Sean Harmer
            seanharmer Sean Harmer
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes